tests/cases/parser/misc/issue_223.hash
// run=fail, stage=parse

wrap := (res: Result<T, (int, str)>): Result<T, IoError> => match res {
}
